platform/jupyterhub-route/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jupyterhub
  namespace: jupyterhub
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external-gateway
      namespace: platform-gateway
      sectionName: https

  hostnames:
    - jupyterhub.hacwa.co.uk

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - group: ""
          kind: Service
          name: proxy-public
          port: 80
          weight: 1
